fix close button appearance on IE9

--- a/stylus/microbox.styl
+++ b/stylus/microbox.styl
@@ -94,7 +94,8 @@ $pager-active = darken($pager-hover, 8%)
 	button()
 
 .microbox-close
-	line-height $button - 6
+	font-family Arial
+	line-height $button + 2
 	right $button-margin
 	top $button-margin
 
